--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbr></app-navbr>
 
-<div class="container">
-  <app-weather-card></app-weather-card>
-</div>
+<app-weather-card></app-weather-card>
+
+<app-footer></app-footer>
