--- a/src/app/MyComponents/navbr/navbr.component.html
+++ b/src/app/MyComponents/navbr/navbr.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">{{ title }}</a>
     <button
@@ -42,13 +42,13 @@
         </li> -->
       </ul>
       <form class="d-flex" role="search">
-        <input
+        <!-- <input
           class="form-control me-2"
           type="search"
           placeholder="Search"
           aria-label="Search"
-        />
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        /> -->
+        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
       </form>
     </div>
   </div>
