--- a/src/app/MyComponents/navbr/navbr.component.html
+++ b/src/app/MyComponents/navbr/navbr.component.html
@@ -17,6 +17,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Forecast</a>
+        </li>
+
+        
         <!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li> -->
