--- a/src/app/MyComponents/weather-card/weather-card.component.css
+++ b/src/app/MyComponents/weather-card/weather-card.component.css
@@ -1,3 +1,7 @@
+* {
+  transition: all 0.4s;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -40,6 +44,7 @@ img.no-select {
 }
 .card1 {
   background-image: linear-gradient(#2196f3, #81d4fa);
+  /* background-image: linear-gradient(#2196f3, #81d4fa); */
   padding: 30px 20px 30px 50px;
 }
 
@@ -110,7 +115,7 @@ input:focus {
 
 .suggestion:hover {
   color: #fff;
-  cursor: pointer;
+  cursor: default;
 }
 
 .line {
