Weather App Using Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-navbr></app-navbr>
-
 <app-weather-card></app-weather-card>
-
-<app-footer></app-footer>
+<!-- <app-forecast-card [data]="selectedCity"></app-forecast-card> -->
