--- a/src/app/MyComponents/navbr/navbr.component.html
+++ b/src/app/MyComponents/navbr/navbr.component.html
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
+    <img
+      src="https://cdn.iconscout.com/icon/free/png-512/free-cloudy-weather-11-1147979.png?f=webp&w=256"
+      alt=""
+      style="height: 30px; margin-right: 3px"
+    />
     <a class="navbar-brand" href="#">{{ title }}</a>
     <button
       class="navbar-toggler"
@@ -18,42 +23,25 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Forecast</a>
+          <a class="nav-link active" href="/" aria-current="page">Forecast</a>
         </li>
-
-        
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li> -->
-        <!-- <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"x
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li> -->
       </ul>
       <form class="d-flex" role="search">
-        <!-- <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        /> -->
-        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+        <div class="form-check form-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="flexSwitchCheckDefault"
+            (click)="Changetemp()"
+          />
+          <label
+            class="form-check-label text-light"
+            for="flexSwitchCheckDefault"
+          >
+            &#176;{{ temp }}
+          </label>
+        </div>
       </form>
     </div>
   </div>
