--- a/src/app/MyComponents/weather-card/weather-card.component.html
+++ b/src/app/MyComponents/weather-card/weather-card.component.html
@@ -1,9 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head> -->
 <div class="body-container">
   <div class="snippet-body">
     <div class="container-fluid px-1 px-sm-3 py-5 mx-auto">
@@ -14,17 +8,35 @@
             <div class="text-center">
               <img class="image mt-5" src="https://i.imgur.com/M8VyA2h.png" />
             </div>
-            <div class="row px-3 mt-3 mb-3">
+            <div class="row px-3 mt-3 mb-1">
               <h1 class="large-font mr-3">
-                {{ RoundtheNum(this.temp) }}&#176;C
+                {{ RoundtheNum(this.temp) }}&#176;{{ typeTemp }}
               </h1>
               <!-- !temp  -->
-              <strong> {{ weather }} </strong>
-              <!-- !weater  -->
+              <div class="container">
+                <div class="row align-items-center">
+                  <div class="col-auto">
+                    <img
+                      src="{{ img }}"
+                      alt=""
+                      style="
+                        width: 50px;
+                        margin-right: -20px;
+                        margin-bottom: 10px;
+                      "
+                    />
+                  </div>
+                  <div class="col">
+                    <h2>{{ weather }}</h2>
+                    <!-- !weater  -->
+                  </div>
+                </div>
+              </div>
               <div class="d-flex flex-column mr-3">
-                <p>{{ city.charAt(0).toUpperCase() + city.slice(1) }}</p>
+                <h5>{{ city.charAt(0).toUpperCase() + city.slice(1) }}</h5>
+                <!-- !ct  -->
                 <small
-                  >{{ hours }}:{{ mins }} - {{ weekdayName }}, {{ date }}
+                  >{{ timeIn12HourFormat }} - {{ weekdayName }}, {{ date }}
                   {{ mothName }} '{{ year }}</small
                 >
                 <!-- !time  -->
@@ -84,7 +96,9 @@
                     <p class="light-text suggestion">Feels Like</p>
                   </div>
                   <div class="col-6">
-                    <p class="ml-auto">{{ RoundtheNum(feels_like) }}&#176;C</p>
+                    <p class="ml-auto">
+                      {{ RoundtheNum(feels_like) }}&#176;{{ typeTemp }}
+                    </p>
                   </div>
                 </div>
                 <div class="row px-3">
@@ -100,7 +114,7 @@
                     <p class="light-text suggestion">Wind</p>
                   </div>
                   <div class="col-6">
-                    <p class="ml-auto suggestion">{{ wind }}km/h</p>
+                    <p class="ml-auto suggestion">{{ wind }} {{ windUnit }}</p>
                   </div>
                 </div>
                 <div class="row px-3">
@@ -108,7 +122,7 @@
                     <p class="light-text suggestion">Pressure</p>
                   </div>
                   <div class="col-6">
-                    <p class="ml-auto">{{ pressure }} hPa</p>
+                    <p class="ml-auto">{{ pressure }} mbar</p>
                   </div>
                 </div>
               </div>
@@ -122,7 +136,7 @@
                 style="height: 60px"
               />
               <p style="display: inline-block" class="light-text suggestion">
-                Sunrise : 6:32 am
+                Sunrise : {{ sunrise }} AM
               </p>
               <p></p>
               <img
@@ -132,7 +146,7 @@
                 style="height: 60px"
               />
               <p style="display: inline-block" class="light-text suggestion">
-                Sunset : 6:23 pm
+                Sunset : {{ sunset }} PM
               </p>
             </div>
           </div>
