--- a/src/app/MyComponents/navbr/navbr.component.html
+++ b/src/app/MyComponents/navbr/navbr.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/" aria-current="page">Forecast</a>
+          <a class="nav-link active" href="/" aria-current="page">About Us</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
