--- a/src/app/MyComponents/navbr/navbr.component.html
+++ b/src/app/MyComponents/navbr/navbr.component.html
@@ -23,13 +23,16 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/" aria-current="page">About Us</a>
+          <a class="nav-link active" href="/about" aria-current="page"
+            >About Us</a
+          >
         </li>
       </ul>
       <form class="d-flex" role="search">
         <div class="form-check form-switch">
           <input
             class="form-check-input"
+            style="cursor: pointer"
             type="checkbox"
             role="switch"
             id="flexSwitchCheckDefault"
@@ -38,6 +41,7 @@
           <label
             class="form-check-label text-light"
             for="flexSwitchCheckDefault"
+            style="cursor: pointer"
           >
             &#176;{{ temp }}
           </label>
