--- a/src/app/MyComponents/weather-card/weather-card.component.html
+++ b/src/app/MyComponents/weather-card/weather-card.component.html
@@ -1,4 +1,4 @@
-<div class="body-container">
+<div class="body-container pb-5 ">
   <div class="snippet-body">
     <div class="container-fluid px-1 px-sm-3 py-5 mx-auto">
       <div class="row d-flex justify-content-center">
@@ -38,12 +38,7 @@
                   class="d-flex mr-3"
                 >
                   <h5>{{ city }}</h5>
-                  <img
-                    src="{{ gojo }}"
-                    sizes=""
-                    srcset=""
-                    style="{{ gojoStyle }}"
-                  />
+                  <img src="{{ gojo }}" style="{{ gojoStyle }}" />
                 </div>
                 <!-- !ct  -->
                 <small
