--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbr></app-navbr>
 <app-alert></app-alert>
-<app-weather-card></app-weather-card>
+<router-outlet></router-outlet>
+<!-- <app-weather-card></app-weather-card> -->
+<!-- <app-about></app-about> -->
