--- a/src/app/MyComponents/weather-card/weather-card.component.html
+++ b/src/app/MyComponents/weather-card/weather-card.component.html
@@ -1,4 +1,4 @@
-<div class="body-container pb-5 ">
+<div class="body-container" style="padding-bottom: 17px">
   <div class="snippet-body">
     <div class="container-fluid px-1 px-sm-3 py-5 mx-auto">
       <div class="row d-flex justify-content-center">
