--- a/src/app/MyComponents/about/about.component.html
+++ b/src/app/MyComponents/about/about.component.html
@@ -1,91 +1,88 @@
-<div class="accordion" id="accordionExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button
-        class="accordion-button"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseOne"
-        aria-expanded="true"
-        aria-controls="collapseOne"
-      >
-        About WeatherWise
-      </button>
-    </h2>
-    <div
-      id="collapseOne"
-      class="accordion-collapse collapse show"
-      data-bs-parent="#accordionExample"
-    >
-      <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by
-        default, until the collapse plugin adds the appropriate classes that we
-        use to style each element. These classes control the overall appearance,
-        as well as the showing and hiding via CSS transitions. You can modify
-        any of this with custom CSS or overriding our default variables. It's
-        also worth noting that just about any HTML can go within the
-        <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button
-        class="accordion-button collapsed"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseTwo"
-        aria-expanded="false"
-        aria-controls="collapseTwo"
-      >
-        Accordion Item #2
-      </button>
-    </h2>
-    <div
-      id="collapseTwo"
-      class="accordion-collapse collapse"
-      data-bs-parent="#accordionExample"
-    >
-      <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden
-        by default, until the collapse plugin adds the appropriate classes that
-        we use to style each element. These classes control the overall
-        appearance, as well as the showing and hiding via CSS transitions. You
-        can modify any of this with custom CSS or overriding our default
-        variables. It's also worth noting that just about any HTML can go within
-        the <code>.accordion-body</code>, though the transition does limit
-        overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button
-        class="accordion-button collapsed"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseThree"
-        aria-expanded="false"
-        aria-controls="collapseThree"
-      >
-        Accordion Item #3
-      </button>
-    </h2>
-    <div
-      id="collapseThree"
-      class="accordion-collapse collapse"
-      data-bs-parent="#accordionExample"
-    >
-      <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden
-        by default, until the collapse plugin adds the appropriate classes that
-        we use to style each element. These classes control the overall
-        appearance, as well as the showing and hiding via CSS transitions. You
-        can modify any of this with custom CSS or overriding our default
-        variables. It's also worth noting that just about any HTML can go within
-        the <code>.accordion-body</code>, though the transition does limit
-        overflow.
+<div class="container mt-5 w-50 h-100">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-7">
+      <div class="card p-3 py-4">
+        <div class="text-center">
+          <img
+            src="https://i.imgur.com/bDLhJiP.jpg"
+            width="100"
+            class="rounded-circle"
+          />
+        </div>
+
+        <div class="text-center mt-3">
+          <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
+          <h5 class="mt-2 mb-0">Yash Kolhatkar</h5>
+          <span>UI/UX Designer</span>
+
+          <div class="px-4 mt-1">
+            <p class="fonts">
+              Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+              nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+            </p>
+          </div>
+
+          <ul class="social-list">
+            <li><i class="fa fa-facebook"></i></li>
+            <li>
+              <a
+                href="https://github.com/yashkolhatkar09"
+                target="_blank"
+                class="fa fa-github custom-link"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/yash__kolhatkar/"
+                target="_blank"
+                class="fa fa-instagram custom-link"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/yash-kolhatkar-701618256"
+                target="_blank"
+                class="fa fa-linkedin custom-link"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://mail.google.com/mail/u/1/#inbox"
+                class="fa fa-google custom-link"
+              ></a>
+            </li>
+          </ul>
+
+          <div class="buttons">
+            <button
+              class="btn btn-outline-primary px-4"
+              onclick="openMessagesApp()"
+            >
+              Message
+            </button>
+            <button
+              class="btn btn-primary px-4 ms-3"
+              onclick="openContactApp()"
+            >
+              Contact
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+<script>
+  function openMessagesApp() {
+    // Open the messaging app with the provided phone number
+    window.location.href = "sms:9145036362";
+  }
+
+  function openContactApp() {
+    // Open the contact app with the provided phone number
+    window.location.href = "tel:9145036362";
+  }
+</script>
