--- a/src/app/MyComponents/about/about.component.html
+++ b/src/app/MyComponents/about/about.component.html
@@ -4,7 +4,7 @@
       <div class="card p-3 py-4">
         <div class="text-center">
           <img
-            src="https://i.imgur.com/bDLhJiP.jpg"
+            src="../../../assets/Images/Extras/Cat.jpeg"
             width="100"
             class="rounded-circle"
           />
@@ -13,26 +13,19 @@
         <div class="text-center mt-3">
           <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>
           <h5 class="mt-2 mb-0">Yash Kolhatkar</h5>
-          <span>UI/UX Designer</span>
+          <span>Full Stack Developer</span>
 
           <div class="px-4 mt-1">
             <p class="fonts">
-              Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-              nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quod
+              sunt nisi delectus tenetur iusto minus, doloremque rerum, minima
+              beatae quasi, vel culpa amet fuga neque provident quisquam fugiat
+              ratione!
             </p>
           </div>
 
           <ul class="social-list">
-            <li><i class="fa fa-facebook"></i></li>
-            <li>
-              <a
-                href="https://github.com/yashkolhatkar09"
-                target="_blank"
-                class="fa fa-github custom-link"
-              ></a>
-            </li>
+            <!-- <li><i class="fa fa-facebook"></i></li> -->
             <li>
               <a
                 href="https://www.instagram.com/yash__kolhatkar/"
@@ -40,6 +33,14 @@
                 class="fa fa-instagram custom-link"
               ></a>
             </li>
+            <li>
+              <a
+                href="https://github.com/yashkolhatkar09"
+                target="_blank"
+                class="fa fa-github custom-link"
+              ></a>
+            </li>
+
             <li>
               <a
                 href="https://www.linkedin.com/in/yash-kolhatkar-701618256"
@@ -55,7 +56,7 @@
             </li>
           </ul>
 
-          <div class="buttons">
+          <!-- <div class="buttons">
             <button
               class="btn btn-outline-primary px-4"
               onclick="openMessagesApp()"
@@ -68,7 +69,7 @@
             >
               Contact
             </button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
