--- a/src/app/MyComponents/navbr/navbr.component.html
+++ b/src/app/MyComponents/navbr/navbr.component.html
@@ -31,7 +31,7 @@
       <form class="d-flex" role="search">
         <div
           class="form-check form-switch"
-          [style.display]="activeComponent === 'about' ? 'none' : 'block'"
+          [style.display]="activeComponent === '' ? 'block' : 'none'"
         >
           <input
             class="form-check-input"
