--- a/src/app/MyComponents/about/about.component.html
+++ b/src/app/MyComponents/about/about.component.html
@@ -17,10 +17,17 @@
 
           <div class="px-4 mt-1">
             <p class="fonts">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quod
-              sunt nisi delectus tenetur iusto minus, doloremque rerum, minima
-              beatae quasi, vel culpa amet fuga neque provident quisquam fugiat
-              ratione!
+            I'm a second-year Computer Science student with a passion for
+              programming and web development. Angular is my forte, and I
+              recently built a weather app project using it. Exploring the world
+              of coding, I've delved into HTML, CSS, and TypeScript, honing my
+              skills with each line of code. Collaborative and curious, I thrive
+              on challenges and seek opportunities to grow. From loops to
+              functions, I navigate the complexities of code, crafting solutions
+              to real-world problems. Eager to contribute to innovative projects
+              and make a difference, I'm driven by the endless possibilities of
+              technology. Let's connect and create something remarkable
+              together!
             </p>
           </div>
 
